[gd_scene load_steps=5 format=3 uid="uid://uor2ror8a3sq"]

[ext_resource type="Script" uid="uid://8rp40324e63v" path="res://ui/inventory/inventory_ui.gd" id="1_i54hv"]
[ext_resource type="PackedScene" uid="uid://byts5cn3i178f" path="res://ui/inventory/cursor/cursor_item.tscn" id="2_kjp3y"]
[ext_resource type="PackedScene" uid="uid://byd26jwycb5cs" path="res://ui/inventory/slot/equipment/equipment_slot.tscn" id="3_yn4wj"]
[ext_resource type="PackedScene" uid="uid://d2a48gvf0pryh" path="res://ui/inventory/slot/weapon/weapon_display.tscn" id="4_geo04"]

[node name="InventoryUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_i54hv")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.176471, 0.176471, 0.654902)

[node name="CursorItem" parent="." instance=ExtResource("2_kjp3y")]
unique_name_in_owner = true
z_index = 1
layout_mode = 1

[node name="Outside" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="InventoryGrid" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -340.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/v_separation = 0
columns = 7

[node name="EquipmentGrid" type="VBoxContainer" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -406.0
offset_top = -233.0
offset_right = -20.0
offset_bottom = 533.0
grow_horizontal = 0
grow_vertical = 2

[node name="Helmet" parent="EquipmentGrid" instance=ExtResource("3_yn4wj")]
layout_mode = 2
text = "Helmet"
equipment_type = Array[int]([1])

[node name="WeaponDisplay" parent="." instance=ExtResource("4_geo04")]
unique_name_in_owner = true
layout_mode = 1
offset_left = 64.0
offset_top = -244.0
offset_right = 64.0
offset_bottom = -244.0

[connection signal="gui_input" from="Outside" to="." method="_on_outside_gui_input"]
